fix: prevent unnecessary scrollbars in accordion containers

--- a/packages/ketcher-react/src/script/ui/views/components/MonomerCreationWizard/MonomerCreationWizard.module.less
+++ b/packages/ketcher-react/src/script/ui/views/components/MonomerCreationWizard/MonomerCreationWizard.module.less
@@ -152,6 +152,10 @@
   color: #fff;
 }
 
+.accordionContainer {
+  overflow: hidden;
+}
+
 .accordion {
   &:global(.MuiAccordion-root) {
     background: none;
